# crate-trends

./: LICENSE.txt  README.md
.github/: FUNDING.yml
.github/workflows/: playwrightCI.yml  rustCI.yml  webCI.yml
.husky/: pre-commit
api/: Cargo.toml  Procfile  README.md
api/src/: agent.rs  main.rs  models.rs
api/src/models/: crates.rs
docker/: docker-compose.yml
docker/rust/: Dockerfile
web/: .babelrc  .eslintrc.json  .gitignore  .prettierrc  README.md  next-env.d.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/e2e/: homepage.spec.ts  rootpage.spec.ts
web/src/api/: api_config.ts  crates_api.ts  index.ts
web/src/app/: next-env.d.ts  next.config.js  tsconfig.json
web/src/app/api/: api_config.ts  crates_api.ts  index.ts
web/src/app/components/[crate_names]/: CrateTableRow.tsx  CratesTable.tsx  DownloadChart.tsx
web/src/app/components/shared/: ExtraInfo.tsx  Footer.tsx  Header.tsx  InputForm.tsx
web/src/app/interfaces/: crate.ts  downloads.ts
web/src/app/pages/: [crate_names].tsx  _app.tsx  _document.tsx  index.tsx
web/src/app/pages/compare/: [crate_names].tsx
web/src/components/[crate_names]/: CrateSizeChart.tsx  CrateTableRow.tsx  CratesTable.tsx  DownloadChart.tsx
web/src/components/details/[crate_name]/: CrateSizeChart.tsx
web/src/components/echarts/: ReactEChart.tsx
web/src/components/shared/: CrateDetailView.tsx  CratesView.tsx  ExtraInfo.tsx  Footer.tsx  Header.tsx  InputForm.tsx  Spinner.tsx
web/src/components/shared/table/: StatsTableHead.tsx
web/src/components/skelton/chart/: ChartSkelton.tsx
web/src/components/skelton/table/: TableSkelton.tsx  TableSkeltonRow.tsx
web/src/hooks/: useResize.ts
web/src/pages/: [crate_names].tsx  _app.tsx  _document.tsx  index.tsx
web/src/pages/details/: [crate_name].tsx
web/src/recoil/: atoms.tsx  selectors.tsx
web/src/web_assembly/: .gitignore  Cargo.toml
web/src/web_assembly/pkg/: package.json  web_assembly.d.ts  web_assembly.js  web_assembly_bg.wasm  web_assembly_bg.wasm.d.ts
web/src/web_assembly/src/: lib.rs  types.rs
