# /**
#  * Copyright (c) 2020-Present, Keita Nonaka
#  *
#  * This source code is licensed under the MIT license found in the
#  * LICENSE file in the root directory of this source tree.
#  */

[package]
name = "crate_trends_api"
version = "1.0.0"
authors = ["Keita Nonaka <iKonnyaku40@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.6"
anyhow = "1"
crates_io_api = "0.8"
env_logger = "0.9"
serde_json = "1.0.91"
