# /**
#  * Copyright (c) 2020-Present, Keita Nonaka
#  *
#  * This source code is licensed under the MIT license found in the
#  * LICENSE file in the root directory of this source tree.
#  */

[package]
name = "crate_trends_api"
version = "1.0.0"
authors = ["Keita Nonaka <iKonnyaku40@gmail.com>"]
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.7.2"
crates_io_api = "0.8"
env_logger = "0.10"
http-body-util = "0.1.0"
serde_json = "1.0.107"
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
